# airport_wind

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
config/dlinear/: baseline_15min.yaml  baseline_15min_cube.yaml  baseline_15min_cube_facl.yaml  baseline_15min_facl.yaml  baseline_15min_psloss.yaml  baseline_hourly.yaml  baseline_hourly_facl.yaml  baseline_hourly_psloss.yaml
config/gru/: baseline_15min.yaml  baseline_15min_cube.yaml  baseline_15min_cube_facl.yaml  baseline_15min_facl.yaml  baseline_15min_psloss.yaml  baseline_hourly.yaml  baseline_hourly_facl.yaml  baseline_hourly_psloss.yaml
config/hcan/: baseline_15min.yaml  baseline_15min_cube.yaml  baseline_15min_cube_facl.yaml  baseline_15min_facl.yaml  baseline_15min_psloss.yaml  baseline_hourly.yaml  baseline_hourly_facl.yaml  baseline_hourly_psloss.yaml  no_hcl_hourly.yaml
config/itransformer/: baseline_15min.yaml  baseline_15min_cube.yaml  baseline_15min_cube_facl.yaml  (+5 more)
docs/: data.md  losses.md  models.md
scripts/: check_architecture.py  evaluate.py  evaluate_all_model_dirs.sh  run_all_15min_baselines.sh  run_all_15min_cube_baselines.sh  run_all_15min_cube_facl_baselines.sh  run_all_15min_facl_baselines.sh  run_all_15min_psloss_baselines.sh  run_all_baselines.sh  run_all_hourly_facl_baselines.sh  run_all_hourly_psloss_baselines.sh  train.py
tests/: helpers.py  test_architecture.py  test_config.py  test_loaders.py  test_losses.py  test_metrics.py  test_model_shapes.py  test_normalization.py  test_registry.py  test_reporting.py  test_smoke.py  test_windows.py
(+63 files in other folders)
